[gd_scene load_steps=4 format=3 uid="uid://bc01xyxgohtl"]

[ext_resource type="Script" path="res://src/enemy_weapon/enemy_gun.gd" id="1_ko0ni"]
[ext_resource type="Texture2D" uid="uid://cf7bvlyeixit1" path="res://sprites/props/gun.png" id="2_2oxcg"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ddo3b"]
radius = 372.022

[node name="enemy_gun" type="Area2D"]
rotation = -0.0292558
collision_layer = 0
script = ExtResource("1_ko0ni")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(26.2229, -7.23603)
shape = SubResource("CircleShape2D_ddo3b")

[node name="WeaponPivot" type="Marker2D" parent="."]

[node name="WeaponTemp" type="Sprite2D" parent="WeaponPivot"]
texture_filter = 1
position = Vector2(31.9571, 1.93562)
rotation = 0.0586082
scale = Vector2(3.0025, 3.0025)
texture = ExtResource("2_2oxcg")
flip_h = true

[node name="ShootPoint" type="Marker2D" parent="WeaponPivot/WeaponTemp"]
unique_name_in_owner = true
position = Vector2(10.5066, -5.30647)

[node name="EnemyShoot" type="Timer" parent="."]
unique_name_in_owner = true

[connection signal="timeout" from="EnemyShoot" to="." method="_on_enemy_shoot_timeout"]
